Fixed small bug (thank you scrollbar it's so great to have a consistent approach towards device-width

--- a/src/styles/pageGeneral.css
+++ b/src/styles/pageGeneral.css
@@ -28,7 +28,7 @@
     width: 400px;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 880px) {
     .infoBox {
         margin-left: 0;
         margin-bottom: 20px;
