--- a/src/styles/pageLore.css
+++ b/src/styles/pageLore.css
@@ -54,7 +54,7 @@ li {
     min-width: 400px;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 880px) {
     .loreContainer {
         width: 100%;
     }
